--- a/2-scss/public/index.html
+++ b/2-scss/public/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>2-scss</title>
+    <title>使用 Scss 开发样式 - @前端小武学习 Vue.js 2.x 在项目中的应用</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but 2-scss doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but 【使用 Scss 开发样式】 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
